fix(style): responsivity navbar gap

--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -115,7 +115,7 @@ nav .advanced *{color: black;}
         height: 80vh;
         background-color: rgba(217, 217, 217, 0.5);
         backdrop-filter: blur(5px);
-        gap: 5px;
+        gap: 4vh;
         width:150px;
         padding: 10px 20px;
         right: 80px;
